# champi-ipc

./: .gitignore  .pre-commit-config.yaml  CHAMPI_IPC_IMPLEMENTATION_PLAN.md  CHANGELOG.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: API.md  MIGRATION_GUIDE.md  TROUBLESHOOTING.md
examples/: basic_usage.py
src/champi_ipc/: __init__.py
src/champi_ipc/base/: __init__.py  exceptions.py  protocols.py  struct_registry.py
src/champi_ipc/cli/: __init__.py  cleanup_cmd.py  main.py  status_cmd.py
src/champi_ipc/core/: __init__.py  shared_memory.py  shared_memory_manager.py  signal_processor.py  signal_queue.py  signal_reader.py
src/champi_ipc/utils/: __init__.py  ack.py  cleanup.py
tests/: test_cleanup.py  test_cli_cleanup.py  test_cli_status.py  test_integration.py  test_shared_memory.py  test_signal_processor.py  test_signal_queue.py  test_signal_reader.py  test_struct_registry.py
tests/integration/: test_producer_consumer.py
tests/unit/: test_shared_memory.py  test_signal_processor.py  test_signal_queue.py  test_signal_reader.py  test_struct_registry.py
