[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "champi-ipc"
version = "0.1.0"
description = "Shared memory IPC infrastructure for multi-process Python applications"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Divagnz", email = "oscar.liguori.bagnis@gmail.com"}
]
requires-python = ">=3.12"
keywords = ["ipc", "shared-memory", "signals", "multiprocessing", "blinker"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]

dependencies = [
    "loguru>=0.7.0",
    "blinker>=1.7.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "black>=24.0.0",
    "pre-commit>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/divagnz/champi-ipc"
Documentation = "https://github.com/divagnz/champi-ipc/blob/main/README.md"
Repository = "https://github.com/divagnz/champi-ipc"
Issues = "https://github.com/divagnz/champi-ipc/issues"

[project.scripts]
champi-ipc = "champi_ipc.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/champi_ipc"]
include = ["src/champi_ipc/py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--cov=src/champi_ipc",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade"
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.black]
line-length = 88
target-version = ['py312']

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
